refact: replace Collections.singletonList with List.of